.idea/src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Budget_B__c</fullName>
        <label>Budget B</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Budget_Range__c</fullName>
        <label>Budget Range</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>&lt;$50K</fullName>
                </value>
                <value>
                    <fullName>$50-100K</fullName>
                </value>
                <value>
                    <fullName>$100-$500K</fullName>
                </value>
                <value>
                    <fullName>&gt;$500K</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CERCOMPLETED__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CERCOMPLETED</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CLASSIFICATION__c</fullName>
        <label>CLASSIFICATION</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Chemical__c</fullName>
        <label>Chemical</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hydrogen Peroxide</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Drivers__c</fullName>
        <label>Drivers</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Budgetary</fullName>
                </value>
                <value>
                    <fullName>Corrosion</fullName>
                </value>
                <value>
                    <fullName>Emergency</fullName>
                </value>
                <value>
                    <fullName>Environmental Regs</fullName>
                </value>
                <value>
                    <fullName>Odor Complaints</fullName>
                </value>
                <value>
                    <fullName>Worker Safety</fullName>
                </value>
                <value>
                    <fullName>Process Improvement</fullName>
                </value>
                <value>
                    <fullName>Turnaround</fullName>
                </value>
                <value>
                    <fullName>Fines</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Status_Change_Date__c</fullName>
        <label>Email Status Change Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Email_Status__c</fullName>
        <label>Email Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_Revenue_Year__c</fullName>
        <label>Estimated Revenue Year</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Geographic_Region__c</fullName>
        <label>Geographic Region</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <label>Industry</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Installation_Date__c</fullName>
        <label>Installation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Project_Manager__c</fullName>
        <label>Lead Project Manager</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Leo DoCarmo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Record_Type__c</fullName>
        <label>Lead Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Method_of_Contact__c</fullName>
        <label>Method of Contact</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Conference/Trade Show</fullName>
                </value>
                <value>
                    <fullName>LinkedIn</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Proactive</fullName>
                </value>
                <value>
                    <fullName>Website - H2O2</fullName>
                </value>
                <value>
                    <fullName>Website - USP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Next_Step__c</fullName>
        <label>Next Step</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OpportunityCoOwner__c</fullName>
        <label>OpportunityCoOwner</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <label>Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROJECTNO__c</fullName>
        <label>PROJECTNO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Past_Due_Link__c</fullName>
        <formula>HYPERLINK(&quot;/00O3C000000QwnN?pv2=&quot;+ Owner:User.Alias, Owner:User.FirstName + &quot; &quot; + Owner:User.LastName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Past Due Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Past_Due__c</fullName>
        <formula>IF( AND( ISPICKVAL(Status, &quot;New&quot;) , (NOW() - CreatedDate) &gt; 1.5), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Past Due</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_Type__c</fullName>
        <label>Project Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MOC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region_Global__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Region</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <label>Segment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Industrial</fullName>
                </value>
                <value>
                    <fullName>Municipal</fullName>
                </value>
                <value>
                    <fullName>Remediation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <label>Territory</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Region_Global__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Territory</valueSetName>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>New,Qualified</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>All_Past_Dues</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.LAST_ACTIVITY</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>Past_Due__c</columns>
        <columns>Past_Due_Link__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Past_Due__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Past_Due_Link__c</field>
            <operation>notContain</operation>
            <value>Inactive</value>
        </filters>
        <filters>
            <field>LEAD.LAST_ACTIVITY</field>
            <operation>equals</operation>
        </filters>
        <label>All Past Dues</label>
    </listViews>
    <listViews>
        <fullName>Central_Region_List_View</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Central Region List View</label>
        <sharedTo>
            <group>Central_Region</group>
            <group>Great_Lakes</group>
            <group>Mid_South</group>
            <group>Mid_West</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>East_Region_List_View</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>East Region List View</label>
        <sharedTo>
            <group>East_Region</group>
            <group>Florida</group>
            <group>Mid_Atlantic_Territory</group>
            <group>North_East_Territory</group>
            <group>Southeast_Territory</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Open_Leads_Management_View</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Unqualified</value>
        </filters>
        <label>Open Leads Management View</label>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <listViews>
        <fullName>Trade_Show_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>1/1/2021 12:00 AM</value>
        </filters>
        <filters>
            <field>LEAD.LEAD_SOURCE</field>
            <operation>equals</operation>
            <value>Trade Show</value>
        </filters>
        <label>Trade Show Leads!</label>
    </listViews>
    <listViews>
        <fullName>West_and_Canada_List_View</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region_Global__c</field>
            <operation>equals</operation>
            <value>East Region</value>
        </filters>
        <label>West and Canada List View</label>
        <sharedTo>
            <group>West_Region</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Your_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.LAST_ACTIVITY</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Your Leads</label>
    </listViews>
    <validationRules>
        <fullName>Spam_trap_for_web_to_lead</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
CONTAINS(Description, &quot;auction&quot;),
CONTAINS(Description, &quot;copyright&quot;),
CONTAINS(Description, &quot;sex&quot;),
CONTAINS(Description, &quot;viagra&quot;),
CONTAINS(Description, &quot;vkmovie.ru&quot;),
CONTAINS(Email, &quot;fevgen708@gmail.com&quot;),
CONTAINS(Description, &quot;и&quot;),
CONTAINS(Description, &quot;Это&quot;),
CONTAINS(Description, &quot;seo&quot;),
CONTAINS(Email, &quot;mail.ru&quot;),
CONTAINS(Email, &quot;inbox.ru&quot;),
CONTAINS(Email, &quot;JasonHok&quot;),
CONTAINS(Email, &quot;list.ru&quot;),
CONTAINS(Email, &quot;bk.ru&quot;),
CONTAINS(Email, &quot;yandex.com&quot;),
CONTAINS(Email, &quot;viagra&quot;),
CONTAINS(Email, &quot;bizml.ru&quot;),
CONTAINS(Email, &quot;yandex.ru&quot;),
CONTAINS(Email, &quot;list.ru&quot;),
CONTAINS(Email, &quot;bk.ru&quot;),
CONTAINS(Email, &quot;dizaer.ru&quot;),
CONTAINS(Email, &quot;.xyz&quot;),
CONTAINS(Description, &quot;на&quot;),
CONTAINS(Description, &quot;SEO&quot;),
CONTAINS(Description, &quot;Россия&quot;),
CONTAINS(Description, &quot;!!!!!!!!!!!!!!!!!&quot;),
NOT(CONTAINS(Email, &quot;@&quot;))
)</errorConditionFormula>
        <errorMessage>This is Spam</errorMessage>
    </validationRules>
</CustomObject>